--- a/Multivariate_Linear_Regression_Air_Quality_Dataset.ipynb
+++ b/Multivariate_Linear_Regression_Air_Quality_Dataset.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aryannewyork/Machine-Learning-Algorithms/blob/master/Multivariate_Linear_Regression_Air_Quality_Dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1346,10 +1336,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "1Wy3GDxOanUbPrmAg9yp5ScpHRwcD_6x9",
-      "authorship_tag": "ABX9TyOVgS5kY3lfNYdApKOTpvWS",
-      "include_colab_link": true
+      "provenance": []
     },
     "gpuClass": "standard",
     "kernelspec": {
